--- a/templates/courses.html
+++ b/templates/courses.html
@@ -125,7 +125,7 @@
     <!-- ##### Breadcumb Area End ##### -->
 
     <!-- ##### Catagory ##### -->
-    <div class="clever-catagory bg-img d-flex align-items-center justify-content-center p-3" style="background-image: url(img/bg-img/bg2.jpg);">
+    <div class="clever-catagory bg-img d-flex align-items-center justify-content-center p-3" style="background-image: url(/img/bg-img/bg2.jpg);">
         <h3>Art &amp; Design</h3>
     </div>
 
