--- a/templates/instructors.html
+++ b/templates/instructors.html
@@ -125,7 +125,7 @@
     <!-- ##### Breadcumb Area End ##### -->
 
     <!-- ##### Instructors Video Start ##### -->
-    <div class="instructors-video d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg4.jpg);">
+    <div class="instructors-video d-flex align-items-center justify-content-center bg-img" style="background-image: url(/img/bg-img/bg4.jpg);">
         <h2>Be The Best Teacher</h2>
         <!-- video btn -->
         <a href="https://www.youtube.com/watch?v=qC_T9ePzANg" class="video-btn"><i class="fa fa-play" aria-hidden="true"></i></a>
