--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -125,7 +125,7 @@
     <!-- ##### Breadcumb Area End ##### -->
 
     <!-- ##### Catagory Area Start ##### -->
-    <div class="clever-catagory blog-details bg-img d-flex align-items-center justify-content-center p-3 height-400" style="background-image: url(img/blog-img/7.jpg);">
+    <div class="clever-catagory blog-details bg-img d-flex align-items-center justify-content-center p-3 height-400" style="background-image: url(/img/blog-img/7.jpg);">
         <div class="blog-details-headline">
             <h3>English Grammar</h3>
             <div class="meta d-flex align-items-center justify-content-center">
