--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,7 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Hero Area Start ##### -->
-    <section class="hero-area bg-img bg-overlay-2by5" style="background-image: url(img/bg-img/bg1.jpg);">
+    <section class="hero-area bg-img bg-overlay-2by5" style="background-image: url(/img/bg-img/bg1.jpg);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -180,7 +180,7 @@
     <!-- ##### Cool Facts Area End ##### -->
 
     <!-- ##### Popular Courses Start ##### -->
-    <section class="popular-courses-area section-padding-100-0" style="background-image: url(img/core-img/texture.png);">
+    <section class="popular-courses-area section-padding-100-0" style="background-image: url(/img/core-img/texture.png);">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -405,7 +405,7 @@
     <!-- ##### Best Tutors End ##### -->
 
     <!-- ##### Register Now Start ##### -->
-    <section class="register-now section-padding-100-0 d-flex justify-content-between align-items-center" style="background-image: url(img/core-img/texture.png);">
+    <section class="register-now section-padding-100-0 d-flex justify-content-between align-items-center" style="background-image: url(/img/core-img/texture.png);">
         <!-- Register Contact Form -->
         <div class="register-contact-form mb-100 wow fadeInUp" data-wow-delay="250ms">
             <div class="container-fluid">
