--- a/templates/single-course.html
+++ b/templates/single-course.html
@@ -126,7 +126,7 @@
     <!-- ##### Breadcumb Area End ##### -->
 
     <!-- ##### Single Course Intro Start ##### -->
-    <div class="single-course-intro d-flex align-items-center justify-content-center" style="background-image: url(img/bg-img/bg3.jpg);">
+    <div class="single-course-intro d-flex align-items-center justify-content-center" style="background-image: url(/img/bg-img/bg3.jpg);">
         <!-- Content -->
         <div class="single-course-intro-content text-center">
             <!-- Ratings -->
